<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_view">It\'s a bit lonely here \n Press the + button on Lower Right Hand Corner</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="dummy_data">Insert Dummy Data</string>

    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="available_quantity">Available Quantity</string>
    <string name="ordered_quantity">Ordered Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="price">Price</string>
    <string name="in_rupee">In Rupees</string>

    <string name="insertion_failed">Insertion of item failed</string>
    <string name="insertion_succesful">Insertion of item successful!!!</string>
    <string name="select_photo">Select Photo</string>


</resources>
